Skyrocketing (infm) values when disabling Continuous Drag #68130

Closed
opened 2019-08-02 14:09:39 +02:00 by Meshington · 9 comments

System Information
Windows 8.1 64 bits

Blender Version
Broken: Blender 2.80 release
Worked: Blender 2.79

Short description of error
When changing values for ‘Dimensions’ with the slider, the values goes to “infm”

Exact steps for others to reproduce the error (via attached blend file)

  1. Load attached .Blend, or your own.
  2. Disable ‘continuous drag’ (Preferences->Input)
  3. Make sure the cube is selected
  4. In the sidebar of 3d view->’Dimensions’ change value in any of X, Y, Z by dragging.
    5... Notice how the value skyrockets with just small mouse movements.

(This might(?) happen with ‘Rotate' as well, but not nearly as high value.)

AimingForMars.blend

**System Information** Windows 8.1 64 bits **Blender Version** Broken: Blender 2.80 release Worked: Blender 2.79 **Short description of error** When changing values for ‘Dimensions’ with the slider, the values goes to “infm” **Exact steps for others to reproduce the error (via attached blend file)** 1. Load attached .Blend, or your own. 2. Disable ‘continuous drag’ (Preferences->Input) 3. Make sure the cube is selected 4. In the sidebar of 3d view->’Dimensions’ change value in any of X, Y, Z by dragging. 5... Notice how the value skyrockets with just small mouse movements. (This might(?) happen with ‘Rotate' as well, but not nearly as high value.) [AimingForMars.blend](https://archive.blender.org/developer/F7645585/AimingForMars.blend)
Author

Added subscriber: @Meshington

Added subscriber: @Meshington
Member

Added subscribers: @ideasman42, @lichtwerk

Added subscribers: @ideasman42, @lichtwerk
Member

@ideasman42 : I have added this to 2.81 milestone (since it was set to "High"), mind checking again?

@ideasman42 : I have added this to 2.81 milestone (since it was set to "High"), mind checking again?

Added subscriber: @gnastacast

Added subscriber: @gnastacast

I see an easy fix to this. The problem is in view3d_buttons.c

It's the way this problem has been fixed everywhere else but it's frankly kind of hacky.

I made a diff for it but I didn't submit it because it still seems like every time a button is created with a float value, the limit is set arbitrarily. In my mind you should be able to set the limits to +- FLT_MAX without breaking everything. I couldn't find where click and drag was implemented for the buttons but I feel like that is where the fix should be applied, not as it was here https://developer.blender.org/D5454?id=17055 and so many other places in the code base.

dimension_drag.diff

I see an easy fix to this. The problem is in view3d_buttons.c It's the way this problem has been fixed everywhere else but it's frankly kind of hacky. I made a diff for it but I didn't submit it because it still seems like every time a button is created with a float value, the limit is set arbitrarily. In my mind you should be able to set the limits to +- FLT_MAX without breaking everything. I couldn't find where click and drag was implemented for the buttons but I feel like that is where the fix should be applied, not as it was here https://developer.blender.org/D5454?id=17055 and so many other places in the code base. [dimension_drag.diff](https://archive.blender.org/developer/F7822742/dimension_drag.diff)

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@ideasman42 I believe this is fixed now, right?

@ideasman42 I believe this is fixed now, right?

This issue was referenced by 490d5bb750

This issue was referenced by 490d5bb7508aa700990871358af5c2ad5fcf5716

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2019-11-05 04:13:06 +01:00
Thomas Dinges added this to the 2.81 milestone 2023-02-08 16:48:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68130
No description provided.